--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent"
-    android:orientation="horizontal"
-    android:gravity="center|bottom"
+    android:orientation="vertical"
     tools:context="com.example.jonib.customlauncher.MainActivity">
 
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/home_screen_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="40dp">
+    </android.support.v4.view.ViewPager>
+
     <ImageButton
+        android:layout_margin="5dp"
+        android:layout_centerInParent="true"
         android:id="@+id/menu_button"
         android:onClick="appsButtonClicked"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerVertical="true"
         android:background="@android:color/transparent"
         android:src="@drawable/ic_action_apps"/>
 
-
-</LinearLayout>
+</RelativeLayout>
