--- a/app/src/main/res/layout/fragment_homescreen.xml
+++ b/app/src/main/res/layout/fragment_homescreen.xml
@@ -3,12 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/home"
+    android:background="@android:color/transparent"
     tools:context="com.example.jonib.customlauncher.fragment.Homescreen">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/icon"
+        android:id="@+id/icon_app"
         android:layout_gravity="center"/>
 
 </FrameLayout>
